[gd_scene load_steps=19 format=3 uid="uid://bsxgp5g0jmyke"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_vopyx"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/UIPanelBase.tres" id="2_63t2f"]
[ext_resource type="Script" uid="uid://ls3oi5ej0d0g" path="res://panels/UIDesk/UIDesk.gd" id="2_j5yap"]
[ext_resource type="FontFile" uid="uid://crlak6jhg5jy2" path="res://assets/font/RubikMonoOne-Regular.ttf" id="4_u3w1e"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="5_7kvcf"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="5_63t2f"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="6_74a5n"]
[ext_resource type="Texture2D" uid="uid://bly6v8fqc5sdb" path="res://assets/icons/Panel.svg" id="6_u3w1e"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://assets/icons/Edit.svg" id="7_tirx7"]
[ext_resource type="Texture2D" uid="uid://1ha66l33ttxn" path="res://assets/icons/Copy.svg" id="8_eafht"]
[ext_resource type="Texture2D" uid="uid://cawxywwrt8wr5" path="res://assets/icons/Arrow_upward.svg" id="9_i2hmx"]
[ext_resource type="Texture2D" uid="uid://cv0titm4w4jp6" path="res://assets/icons/Arrow_downward.svg" id="10_ol5uu"]
[ext_resource type="Script" uid="uid://b3irikla64343" path="res://panels/UIDesk/DrawGrid.gd" id="13_fr8l7"]
[ext_resource type="PackedScene" uid="uid://b6eijsxlis7r3" path="res://components/SelectBox/SelectBox.tscn" id="15_u3w1e"]

[sub_resource type="LabelSettings" id="LabelSettings_i61ds"]
font = ExtResource("4_u3w1e")
font_size = 71
font_color = Color(0, 0, 0, 0.105882)

[sub_resource type="InputEventKey" id="InputEventKey_trkq2"]
device = -1
shift_pressed = true
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_5ty2n"]
events = [SubResource("InputEventKey_trkq2")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3w1e"]
bg_color = Color(0.11119685, 0.11119684, 0.11119684, 0.15686275)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.05490196, 0.4745098, 0.9647059, 0.2)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="UIDesk" type="PanelContainer" node_paths=PackedStringArray("disable_on_deselect", "_select_box", "_container_node", "_area_indicator", "edit_controls", "edit_mode_nodes", "menu_bar")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_vopyx")
theme_override_styles/panel = ExtResource("2_63t2f")
script = ExtResource("2_j5yap")
disable_on_deselect = [NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Delete"), NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Edit"), NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Copy"), NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer/MoveUp"), NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer/MoveDown")]
_select_box = NodePath("VBoxContainer/PanelContainer2/Container/SelectBox")
_container_node = NodePath("VBoxContainer/PanelContainer2/Container")
_area_indicator = NodePath("VBoxContainer/PanelContainer2/Container/AeraIndicator")
edit_controls = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/EditControls")
display_mode = null
edit_mode_nodes = [NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls"), NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls")]
menu_bar = NodePath("VBoxContainer/PanelMenuBar")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -44.0
offset_right = 246.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "SPECTRUM"
label_settings = SubResource("LabelSettings_i61ds")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelMenuBar" parent="VBoxContainer" instance=ExtResource("5_63t2f")]
layout_mode = 2

[node name="ComponentButton" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="0"]
text = "Desk"
icon = ExtResource("6_u3w1e")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer" index="0"]
layout_mode = 2

[node name="MainControls" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls"]
layout_mode = 2

[node name="Add" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_7kvcf")

[node name="Delete" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
disabled = true
shortcut = SubResource("Shortcut_5ty2n")
icon = ExtResource("6_74a5n")

[node name="Edit" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("7_tirx7")

[node name="Copy" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("8_eafht")

[node name="LayerControls" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls"]
layout_mode = 2

[node name="MoveUp" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("9_i2hmx")

[node name="MoveDown" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer"]
layout_mode = 2
disabled = true
icon = ExtResource("10_ol5uu")

[node name="EditControls" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="2"]
show_edit = true
show_settings = true

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="Control" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("13_fr8l7")
color = Color(0, 0, 0, 0.231373)
grid_size = Vector2(80, 80)
line_width = 2.28
grid_mode = 1

[node name="SelectBox" parent="VBoxContainer/PanelContainer2/Container" node_paths=PackedStringArray("event_control") instance=ExtResource("15_u3w1e")]
visible = false
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
event_control = NodePath("..")
snapping_distance = Vector2(80, 80)

[node name="AeraIndicator" type="Panel" parent="VBoxContainer/PanelContainer2/Container"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -243.0
offset_right = 299.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u3w1e")

[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/MainControls/HBoxContainer/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/HBoxContainer/LayerControls/HBoxContainer/MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="gui_input" from="VBoxContainer/PanelContainer2/Container" to="." method="_on_container_gui_input"]
[connection signal="gui_input" from="VBoxContainer/PanelContainer2/Container" to="VBoxContainer/PanelContainer2/Container/SelectBox" method="gui_input_callback"]
[connection signal="mouse_entered" from="VBoxContainer/PanelContainer2/Container" to="." method="_on_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer2/Container" to="." method="_on_container_mouse_exited"]
[connection signal="resized" from="VBoxContainer/PanelContainer2/Container" to="." method="_on_container_resized"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/Container/SelectBox" to="." method="_on_select_box_pressed"]
[connection signal="released" from="VBoxContainer/PanelContainer2/Container/SelectBox" to="." method="_on_select_box_released"]

[editable path="VBoxContainer/PanelMenuBar"]
